# app/Http/Controllers/API/AuthController.php
@@ -11,68 +11,18 @@ use App\Models\User;
 use OpenAPI\Annotations as OA;
 
 /**
- * Class AuthController
+ * Class AuthController.
  * 
  * @author Yobel <yobel.422023001@civitas.ukrida.ac.id>
  */
 class AuthController extends Controller
 {
-/**  @OA\Post(
-     *     path="/api/User/register",
-     *     tags={"User"},
-     *     summary="Register new user & get token",
-     *     operationId="register",
-     *     @OA\Response(
-     *         response=400,
-     *         description="Invalid input",
-     *         @OA\JsonContent()
-     *     ),
-     *     @OA\Response(
-     *         response=201,
-     *         description="Successful",
-     *         @OA\JsonContent()
-     *     ),
-     *     @OA\RequestBody(
-     *         required=true,
-     *         description="Request body description",
-     *         @OA\JsonContent(
-     *             ref="#/components/schemas/User",
-     *             example={"name": "Kimto kimtoputra", "email": "kimto@gmail.com","password": "kimto123", 
-     *                      "password_confirmation": "kimto123"}
-     *         ),
-     *     )
-     * )
-     */
-    public function register(Request $request)
-    {
-        try {
-            $validator = Validator::make($request->all(), [
-                'name' => 'required|string|max:255',
-                'email' => 'required|string|email|max:255|unique:users',
-                'password' => 'required|string|min:6|confirmed',
-            ]);
-            if ($validator->fails()) {
-                throw new HttpException(400, $validator->messages()->first());
-            }
-            $request['password'] = Hash::make($request['password']);
-            $request['remember_token'] = \Illuminate\Support\Str::random(10);
-            $user = User::create($request->toArray());
-            $token = $user->createToken('All Yours')->accessToken;
-            return response()->json(
-                array('name' => $request->name, 'email' => $request->get('email'), 'token' => $token),
-                200 
-            );
-        } catch(\Exception $exception) {
-            throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
-        }
-    }
-
 /**
  * @OA\Post(
- *      path="/api/user/login",
- *      tags={"User"},
- *      summary="log in to existing user & get token",
- *      operationId="login",
+ *      path="/api/user/register",
+ *      tags={"user"},
+ *      summary="Register new user & get token",
+ *      operationId="register",
  *      @OA\Response(
  *          response=400,
  *          description="Invalid input",
@@ -80,6 +30,55 @@ class AuthController extends Controller
  *      ),
  *      @OA\Response(
  *          response=201,
+ *          description="Successful",
+ *          @OA\JsonContent()
+ *      ),
+ *      @OA\RequestBody(
+ *          required=true,
+ *          description="Request body description",
+ *          @OA\JsonContent(
+ *              ref="#/components/schemas/User",
+ *              example={"name": "Kimto", "email": "kimto@gmail.com","password": "kimto123", "password_confirmation": "kimto123"}
+ *          ),
+ *      )
+ * )
+ */
+public function register(Request $request){
+    try{
+        $validator = Validator::make($request->all(), [
+            'name' => 'required|string|max:255',
+            'email' => 'required|string|email|max:255|unique:users',
+            'password' => 'required|string|min:6|confirmed',
+        ]);
+        if ($validator->fails()){
+            throw new HttpException(400, $validator->messages()->first());
+        }
+        $request['password']        =   Hash::make($request['password']);
+        $request['remember_token']  =   \Illuminate\Support\Str::random(10);
+        $user   = User::create($request->toArray());
+        $token  = $user->createToken('All Yours')->accessToken; 
+        return response()->json(
+            array('name'=>$request->name, 'email'=> $request->get('email'), 'token'=>$token),
+            200
+        );
+    } catch(\Exception $exception) {
+        throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+    }
+}
+
+/**
+ * @OA\Post(
+ *      path="/api/user/login",
+ *      tags={"user"},
+ *      summary="Log in to existing user & get token",
+ *      operationId="login",
+ *      @OA\Response(
+ *          response=400,
+ *          description="Invalid input",
+ *          @OA\JsonContent()
+ *      ),
+ *      @OA\Response(
+ *          response=200,
  *          description="Successful",
  *          @OA\JsonContent()
  *      ),
@@ -111,10 +110,10 @@ public function login(Request $request){
                     200
                 );
             } else{
-                return response()->json(array('message'=>'Password mismatch'), 400);
+                return response()->json(array('message'=>'Password tidak cocok'), 400);
             }
         } else {
-            return response()->json(array('message'=>'User does not exist'), 400);
+            return response()->json(array('message'=>'User tidak ditemukan'), 400);
         }
     } catch(\Exception $exception) {
         throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
@@ -124,8 +123,8 @@ public function login(Request $request){
 /**
  * @OA\Post(
  *      path="/api/user/logout",
- *      tags={"User"},
- *      summary="log out & destroy self token",
+ *      tags={"user"},
+ *      summary="Log out & destroy self token",
  *      operationId="logout",
  *      @OA\Response(
  *          response=400,
@@ -133,14 +132,14 @@ public function login(Request $request){
  *          @OA\JsonContent()
  *      ),
  *      @OA\Response(
- *          response=201,
+ *          response=200,
  *          description="Successful",
  *          @OA\JsonContent()
  *      ),
  *      @OA\Parameter(
  *          name="email",
  *          in="path",
- *          description="User Email",
+ *          description="Masukan user email",
  *          required=true,
  *          @OA\Schema(
  *              type="string",
@@ -153,10 +152,10 @@ public function login(Request $request){
     try {
         $token = $request->user()->token();
         $token->revoke();
-        return response()->json(array('message'=>'Successfully logged out!'),
+        return response()->json(array('message'=>'Logout anda berhasil'),
         200);
     } catch(\Exception $exception) {
         throw new HttpException(400, "Invalid data: {$exception->getMessage()}");
+        }
     }
- }
 }
